--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "ankeeta",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.1",
+    "mongoose": "^5.12.13"
   }
 }
