--- a/config.env
+++ b/config.env
@@ -3,3 +3,5 @@ PORT=8000
 USERNAME=ankeeta
 DATABASE=mongodb+srv://ankeeta:<password>@cluster0.zsqrz.mongodb.net/instagram-clone?retryWrites=true&w=majority
 PASSWORD=RD7X86aoJJd6tlJs
+EMAIL_USERNAME=your-gmail
+EMAIL_PASSWORD=your-password
