--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "ankeeta",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.4.1",
@@ -21,7 +22,9 @@
     "express-session": "^1.17.2",
     "mongoose": "^5.12.13",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.2",
     "passport": "^0.4.1",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
     "validator": "^13.6.0"
