--- a/config.env
+++ b/config.env
@@ -5,3 +5,7 @@ DATABASE=mongodb+srv://ankeeta:<password>@cluster0.zsqrz.mongodb.net/instagram-c
 PASSWORD=RD7X86aoJJd6tlJs
 EMAIL_USERNAME=your-gmail
 EMAIL_PASSWORD=your-password
+JWT_SECRET=my-ultra-secure-and-ultra-long-secret
+JWT_EXPIRES_IN=100d
+JWT_COOKIE_EXPIRES_IN=90
+RESET_PASSWORD_KEY=my-ultra-secure-and-ultra-long-secret
