--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
+    "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.2",
