--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.17.2",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.13",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.2",
@@ -29,6 +30,7 @@
     "passport-github2": "^0.1.12",
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
+    "socket.io": "^4.1.2",
     "validator": "^13.6.0"
   }
 }
