--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 node_modules/
 config.env
 package-lock.json
-uploads/posts/avatars*
+uploads/posts/avatars/*
+!uploads/posts/avatars/.gitkeep
 uploads/users/avatars/*
+!uploads/users/avatars/.gitkeep
