--- a/config-example.env
+++ b/config-example.env
@@ -1,15 +1,21 @@
-NODE_ENV=environment
-PORT=port
-USERNAME=your username
-DATABASE=mongodb database url
-PASSWORD=mongodb password
-JWT_SECRET=jwt secret
-JWT_EXPIRES_IN=jwt expiry duration
-JWT_COOKIE_EXPIRES_IN=jwt cookie expiry duration
-RESET_PASSWORD_KEY=your reset password key
-GOOGLE_CLIENT_ID=your google client id
-GOOGLE_SECRET=your google client secret
-GOOGLE_CALLBACK=your google callback url 
-GITHUB_CLIENT_ID = your github client id
-GITHUB_CLIENT_SECRET =your github client secret
-GITHUB_CALLBACK=your github callback url
+NODE_ENV=//your environment
+PORT=//default port
+APP_BASE_URL=//base url of your app
+USERNAME=//username
+DATABASE=//mongodb database url
+PASSWORD=//mongodb database password
+EMAIL_USERNAME=//your-gmail
+EMAIL_PASSWORD=//your-password
+CLOUDINARY_API_KEY=//cloudinary API key
+CLOUDINARY_API_SECRET=// Cloudinary API secret
+CLOUDINARY_CLOUD_NAME=// Cloudinary cloud name
+JWT_SECRET=// JWT secret
+JWT_EXPIRES_IN=//JWT expiry
+JWT_COOKIE_EXPIRES_IN=//JWT cookie expiry
+RESET_PASSWORD_KEY=//reset password key
+GOOGLE_CLIENT_ID=//your google client ID
+GOOGLE_SECRET=//your google client secret
+GOOGLE_CALLBACK=// your google callback URL
+GITHUB_CLIENT_ID = //your github client ID
+GITHUB_CLIENT_SECRET = //your github client secret
+GITHUB_CALLBACK=// your github callback URL
